--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,17 @@ spring:
     console:
       enabled: true
       path: /h2-console
+#  kafka:
+#    bootstrap-servers: localhost:9092
+#    producer:
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+#    consumer:
+#      group-id: my-group
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+#      properties:
+#        spring.json.trusted.packages: "io.gnupinguin.sporty.interview.async.events"
 
 springdoc:
   swagger-ui:
