--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ kafka:
   bootstrap-servers: localhost:9092
   jackpotBetsTopic: jackpot-bets
   jackpotBetsRedeliveryTopic: jackpot-bets-redelivery
+  jackpotRewardsTopic: jackpot-rewards
   consumer:
     processingThreads: 10
     groupId: app-group
